--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,80 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
 
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 'Roboto',sans-serif;
-    background-color: ;
+    font-size: 'Roboto', sans-serif;
+    background-color: rgb(195, 190, 190);
     min-height: 100vh;
 }
+
+.wrapper {
+    width: 800px;
+    background-color: #fff;
+    box-shadow: 0 0 10px #000;
+    margin-top: 20px;
+}
+
+.header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    flex-direction: column;
+    position: relative;
+    height: 360px;
+    padding: 20px 40px;
+    font-family: 'Black Ops One', cursive;
+    background-image: url('/img/img-header.jfif');
+    background-size:cover ;
+    background-position: center;
+    z-index: 0;
+}
+.shadow{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0 ,.4);
+    z-index: -1;
+}
+h1{
+    margin-bottom: 26px;
+    color: #fff;
+    font-size: 36px;
+}
+.search{
+    padding: 10px 20px;
+    margin-bottom: 35px;
+    width: 100%;
+    font-size: 16px;
+    border-radius: 5px;
+    background-color:rgb(230, 230, 230,.8) ;
+}
+
+.product-list{
+    padding: 20px 30px;
+
+}
+h2{
+    padding: 20px 0;
+}
+ul{
+    padding-bottom: 30px;
+    font-size: 16px;
+    list-style: none;
+}
+li{
+    padding: 8px 30px;
+    border-bottom: 1px solid rgb(225, 222, 222);
+}
+li:last-child{
+    border: none;
+}
+    
