--- a/css/main.css
+++ b/css/main.css
@@ -44,11 +44,7 @@ body {
     background-color: rgb(0,0,0 ,.4);
     z-index: -1;
 }
-h1{
-    margin-bottom: 26px;
-    color: #fff;
-    font-size: 36px;
-}
+
 .search{
     padding: 10px 20px;
     margin-bottom: 35px;
@@ -66,6 +62,7 @@ h2{
     padding: 20px 0;
 }
 ul{
+    display: none;
     padding-bottom: 30px;
     font-size: 16px;
     list-style: none;
@@ -77,4 +74,32 @@ li{
 li:last-child{
     border: none;
 }
+   
+.text-shine{
+  position: absolute;
+  top: 65%;
+  left: 16%;
+  transform: translate(-50%,-50%);
+  padding: 12px 48px;
+  color: #ffffff;
+  background: linear-gradient(to right, #4d4d4d 0, white 10%, #4d4d4d 20%);
+  background-position: 0;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shine 4s infinite linear;
+  animation-fill-mode: forwards;
+  -webkit-text-size-adjust: none;
+  font-weight: 600;
+  font-size: 20px;
+  text-decoration: none;
+  white-space: nowrap;
+}
     
+@keyframes shine{
+  0%
+    {background-position: 0}
+  60%
+    {background-position: 260px}
+  100%
+    {background-position: 260px}
+};
